set up du router

--- a/gestion-tutorat-front/src/app/app.component.html
+++ b/gestion-tutorat-front/src/app/app.component.html
@@ -1,4 +1,3 @@
-<app-import></app-import>
 
-<app-affiche-etudiants></app-affiche-etudiants>
-<app-table></app-table>
+
+<router-outlet></router-outlet>
