reading data for the table

--- a/gestion-tutorat-front/src/app/affiche-etudiants/affiche-etudiants.component.html
+++ b/gestion-tutorat-front/src/app/affiche-etudiants/affiche-etudiants.component.html
@@ -1,7 +1,8 @@
-<h1>Student Management</h1>
+<h2>Students</h2>
+
 <app-table
   [columns]="columns"
-  [data]="data"
-  [showEdit]="showEdit"
-  [showDelete]="showDelete">
+  [data]="students"
+  [showEdit]="true"
+  [showDelete]="true">
 </app-table>
