--- a/gestion-tutorat-front/src/app/shared/table/table.component.html
+++ b/gestion-tutorat-front/src/app/shared/table/table.component.html
@@ -1,23 +1,23 @@
+<div style="overflow-x: auto;">
 <table mat-table [dataSource]="data" class="mat-elevation-z8">
 
-    <!-- Dynamic Columns -->
     <ng-container *ngFor="let column of columns" [matColumnDef]="column.columnDef">
       <th mat-header-cell *matHeaderCellDef> {{ column.header }} </th>
       <td mat-cell *matCellDef="let element">
         {{ column.cell(element) }}
       </td>
     </ng-container>
-  
-    <!-- Actions Column -->
+
     <ng-container matColumnDef="actions" *ngIf="showEdit || showDelete">
-      <th mat-header-cell *matHeaderCellDef> Actions </th>
-      <td mat-cell *matCellDef="let element">
-        <button mat-button *ngIf="showEdit" (click)="edit(element)">Edit</button>
-        <button mat-button color="warn" *ngIf="showDelete" (click)="delete(element)">Delete</button>
+      <th mat-header-cell *matHeaderCellDef class="sticky"> Actions </th>
+      <td mat-cell *matCellDef="let element" class="sticky">
+        <button type="button" class="btn btn-outline-warning btn-sm" *ngIf="showEdit" (click)="edit(element)">Edit</button>
+        <button type="button" class="btn btn-danger btn-sm" *ngIf="showDelete" (click)="delete(element)">Delete</button>
       </td>
     </ng-container>
+    
   
-    <!-- Header and Rows -->
     <tr mat-header-row *matHeaderRowDef="columnDefinitions"></tr>
     <tr mat-row *matRowDef="let row; columns: columnDefinitions"></tr>
   </table>
+</div>
