--- a/gestion-tutorat-front/src/app/app.component.html
+++ b/gestion-tutorat-front/src/app/app.component.html
@@ -1,1 +1,8 @@
+<nav>
+    <a routerLink="/etudiants/all">Liste Étudiants</a> |
+    <a routerLink="/import">Importer Fichiers</a> |
+    <a routerLink="/auto-affectation">Auto-Affectation</a>
+  </nav>
+  
 <router-outlet></router-outlet>
+  
