ajout de getAll() pour tuteur et modifications dans l'affichage de tous les étudiants

--- a/gestion-tutorat-front/src/app/app.component.html
+++ b/gestion-tutorat-front/src/app/app.component.html
@@ -1,7 +1,8 @@
 <nav>
     <a routerLink="/etudiants/all">Liste Étudiants</a> |
     <a routerLink="/import">Importer Fichiers</a> |
-    <a routerLink="/auto-affectation">Auto-Affectation</a>
+    <a routerLink="/auto-affectation">Auto-Affectation</a> | 
+    <a routerLink="/affectation-manuelle">Affectation-Manuelle</a>
   </nav>
   
 <router-outlet></router-outlet>
