ajout de liste étudiants à filtre étudiants

--- a/gestion-tutorat-front/src/app/components/affectation-manuelle/affectation-manuelle.component.html
+++ b/gestion-tutorat-front/src/app/components/affectation-manuelle/affectation-manuelle.component.html
@@ -1,4 +1,4 @@
-  <app-filtre-etudiants></app-filtre-etudiants>
+  <app-filtre-etudiants [students]="students"></app-filtre-etudiants>
   <mat-expansion-panel (opened)="panelOpenState.set(true)" (closed)="panelOpenState.set(false)">
     <mat-expansion-panel-header>
       <mat-panel-description>
