--- a/gestion-tutorat-front/src/app/components/filtre-etudiants/filtre-etudiants.component.html
+++ b/gestion-tutorat-front/src/app/components/filtre-etudiants/filtre-etudiants.component.html
@@ -53,7 +53,8 @@
       </div>
   
         <div class="filter-actions">
-          <button type="submit" mat-button>Appliquer les filtres</button>
+          <button type="submit" class="btn btn-outline-dark btn-sm" >Appliquer les filtres</button>
+          
         </div>
       </div>
     </form>
