--- a/gestion-tutorat-front/src/app/components/affectation-manuelle/affectation-manuelle.component.css
+++ b/gestion-tutorat-front/src/app/components/affectation-manuelle/affectation-manuelle.component.css
@@ -1,4 +1,6 @@
-
+mat-card{
+  border-radius: 5px; /* Rounded corners for the card */
+}
 .split-screen {
   display: flex;
   justify-content: space-between;
@@ -12,8 +14,8 @@
   display: flex;
   flex-direction: column;
   gap: 20px;
-  background-color: #e7e6e6;
-  border-radius: 12px;
+  background-color: #f8f8f8;
+  border-radius: 5px;
 }
 
 .right-column {
@@ -49,6 +51,7 @@
   display: flex;
   flex-direction: column;
   background-color: white;
+  border-radius: 5px; /* Rounded corners for the card */
 }
 
 mat-card-title {
@@ -104,7 +107,7 @@ mat-card-content div label {
 }
 
 mat-card-content div span {
-  color: #3a3a3a;
+  color: #3a3a3ae7;
   font-size: 14px;
 }
 
@@ -116,16 +119,4 @@ h2 {
   flex: 1;
   display: flex;
   flex-direction: column;
-}
-
-
-/* FILTRES ICI */
-mat-expansion-panel {
-  max-width: 500px; /* Adjust the width as per your preference */
-  margin: 0 auto; 
-  margin-top: 1%;
-  background-color: white;
-}
-mat-panel-description {
-  font-size: 16px;
 }
