--- a/gestion-tutorat-front/src/app/app.component.html
+++ b/gestion-tutorat-front/src/app/app.component.html
@@ -1,4 +1,3 @@
-<!-- app.component.html -->
 <nav class="navbar navbar-light bg-light">
   <div class="container-fluid">
     <a class="navbar-brand" routerLink="/">Accueil</a>
@@ -17,6 +16,10 @@
       </li>
       <li class="nav-item">
         <a routerLink="/auto-affectation" class="nav-link">Auto-Affectation</a>
+      </li>
+      <!-- Add Reporting Link -->
+      <li class="nav-item">
+        <a routerLink="/reporting" class="nav-link">Reporting</a>
       </li>
     </ul>
   </div>
